Fix Bug 284685 - korganizer-generated mails cannot be sent

FIXED-IN: 4.8.1
BUG: 284685